Added Multiple Collections Connection

--- a/Retomuub.Client/appsettings.json
+++ b/Retomuub.Client/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+    "RetoMuubSettings": {
+      "ConnectionString": "mongodb+srv://testUser:zNW3wMQsbUWXc0Nk@retomuub.psqtodl.mongodb.net/?retryWrites=true&w=majority",
+      "DatabaseName": "retomuub"
+    }
+  ,
   "AllowedHosts": "*"
 }
