--- a/Retomuub.Client/Retomuub.Client.csproj
+++ b/Retomuub.Client/Retomuub.Client.csproj
@@ -7,6 +7,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="7.0.2" />
     <PackageReference Include="MongoDB.Driver" Version="2.19.0" />
   </ItemGroup>
