--- a/Retomuub.Bussiness/Retomuub.Bussiness.csproj
+++ b/Retomuub.Bussiness/Retomuub.Bussiness.csproj
@@ -7,6 +7,8 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="7.0.2" />
     <PackageReference Include="MongoDB.Driver" Version="2.19.0" />
   </ItemGroup>
 
