--- a/Retomuub.Client/appsettings.json
+++ b/Retomuub.Client/appsettings.json
@@ -5,10 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-    "RetoMuubSettings": {
-      "ConnectionString": "mongodb+srv://testUser:zNW3wMQsbUWXc0Nk@retomuub.psqtodl.mongodb.net/?retryWrites=true&w=majority",
-      "DatabaseName": "retomuub"
-    }
+  "Jwt":{
+    "Key": "QPVs@hU%t+Bq^HdGzunD",
+    "Issuer": "http://localhost:5258/",
+    "Audience": "http://localhost:5258/"
+  },
+  "RetoMuubSettings": {
+    "ConnectionString": "mongodb+srv://testUser:zNW3wMQsbUWXc0Nk@retomuub.psqtodl.mongodb.net/?retryWrites=true&w=majority",
+    "DatabaseName": "retomuub"
+  }
   ,
   "AllowedHosts": "*"
 }
