--- a/Retomuub.Client/Retomuub.Client.csproj
+++ b/Retomuub.Client/Retomuub.Client.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="7.0.2" />
     <PackageReference Include="MongoDB.Driver" Version="2.19.0" />
   </ItemGroup>
